--- a/css/book.css
+++ b/css/book.css
@@ -1,7 +1,12 @@
 .menu {
+    width: 231px;
+    height: 900px;
+    background: #ffffff;
+    filter: drop-shadow(0px 10px 25px rgba(29, 52, 54, 0.08));
+}
+.menuNext {
     width: 211px;
     height: 900px;
-    border: 1px solid red;
     margin-left: 20px;
 }
 
@@ -138,7 +143,6 @@
 .menu .exid {
     height: 216px;
     margin-top: 60px;
-    border: 1px solid red;
 }
 
 .menu .exid .star {
