--- a/css/mainPage.scss
+++ b/css/mainPage.scss
@@ -1,5 +1,5 @@
 body {
-    background: #e5e5e5;
+    background: #fafafa;
     display: flex;
 }
 
@@ -9,7 +9,7 @@ body {
     max-width: 529px;
     width: 100%;
     height: 25px;
-    margin-top: 20px;
+    padding-top: 20px;
 }
 @mixin successesTitle {
     font-family: Nunito;
@@ -35,12 +35,17 @@ body {
     background: #282846;
     border-radius: 50px;
 }
+@mixin timeMix {
+    background: #ffffff;
+    width: 473px;
+    box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+    border-radius: 10px;
+}
 
 .mainUnit {
     max-width: 1069px;
     width: 100%;
     height: 844px;
-    border: 1px solid blue;
     margin-left: 70px;
     margin-top: 20px;
 
@@ -51,7 +56,6 @@ body {
         max-width: 1068px;
         width: 100%;
         height: 44px;
-        border: 1px solid red;
 
         .newTask {
             display: flex;
@@ -107,83 +111,222 @@ body {
             }
         }
     }
-    .tasks {
-        max-width: 566px;
-        width: 100%;
-        height: 715px;
-        margin-top: 30px;
-        border: 1px solid rgb(9, 255, 0);
-
-        .successes {
+    .tasksMain {
+        display: flex;
+        justify-content: space-between;
+        .tasks {
             max-width: 566px;
             width: 100%;
-            height: 211px;
-            text-align: -webkit-center;
+            margin-top: 30px;
 
-            .successestitleHeader {
-                @include successestitleHeader;
-                .successesTitle {
-                    @include successesTitle;
-                }
-                .ellipsis {
-                    @include ellipsis;
-                    .ellipsisSpan {
-                        @include ellipsisSpan;
-                    }
-                }
-            }
-            .taskBoard {
-                display: flex;
-                justify-content: space-between;
-                max-width: 529px;
+            .successes {
+                max-width: 566px;
                 width: 100%;
-                height: 126px;
-                margin-top: 5px;
-                .taskBoard_1 {
-                    .taskBoardP {
-                        font-family: Nunito;
-                        font-style: normal;
-                        font-weight: 600;
-                        font-size: 12px;
-                        line-height: 16px;
-                        color: #282846;
+                height: 211px;
+                text-align: -webkit-center;
+                background: #ffffff;
+                box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+                border-radius: 10px;
+                margin-bottom: 30px;
+
+                .successestitleHeader {
+                    @include successestitleHeader;
+                    .successesTitle {
+                        @include successesTitle;
                     }
-                    .rangeOfTasks {
-                        border: 1px solid #29a19c;
-                        box-sizing: border-box;
-                        border-radius: 200px;
-                        background: #ffffff;
-                        width: 100px;
-                        height: 100px;
-                        .meaning {
+                    .ellipsis {
+                        @include ellipsis;
+                        .ellipsisSpan {
+                            @include ellipsisSpan;
+                        }
+                    }
+                }
+                .taskBoard {
+                    display: flex;
+                    justify-content: space-between;
+                    max-width: 529px;
+                    width: 100%;
+                    height: 126px;
+                    margin-top: 5px;
+                    .taskBoard_1 {
+                        .taskBoardP {
                             font-family: Nunito;
                             font-style: normal;
                             font-weight: 600;
-                            font-size: 36px;
-                            line-height: 49px;
-                            color: #29a19c;
-                            margin-top: 12px;
+                            font-size: 12px;
+                            line-height: 16px;
+                            color: #282846;
+                        }
+                        .rangeOfTasks {
+                            border: 1px solid #29a19c;
+                            box-sizing: border-box;
+                            border-radius: 200px;
+                            background: #ffffff;
+                            width: 100px;
+                            height: 100px;
+                            .meaning {
+                                font-family: Nunito;
+                                font-style: normal;
+                                font-weight: 600;
+                                font-size: 36px;
+                                line-height: 49px;
+                                color: #29a19c;
+                                margin-top: 12px;
+                            }
+                        }
+                    }
+                }
+            }
+            .activeTasks {
+                max-width: 566px;
+                width: 100%;
+                height: 482px;
+
+                text-align: -webkit-center;
+                background: #ffffff;
+                box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+                border-radius: 10px;
+                .successestitleHeader {
+                    @include successestitleHeader;
+                    .successesTitle {
+                        @include successesTitle;
+                    }
+                    .ellipsis {
+                        @include ellipsis;
+                        .ellipsisSpan {
+                            @include ellipsisSpan;
+                        }
+                    }
+                }
+
+                .checkСontainer {
+                    display: flex;
+                    justify-content: space-between;
+                    max-width: 526px;
+                    width: 100%;
+                    height: 50px;
+                    margin: 10px 0;
+                    background: rgba(41, 161, 156, 0.02);
+                    border: 1px solid rgba(40, 40, 70, 0.1);
+                    border-radius: 10px;
+                    .check {
+                        display: flex;
+                        align-items: center;
+                        margin-left: 15px;
+                        .checkbox {
+                            width: 20px;
+                            height: 20px;
+                            border: 1px solid #29a19c;
+                        }
+                        .checkP {
+                            font-family: Nunito;
+                            font-style: normal;
+                            font-weight: normal;
+                            font-size: 14px;
+                            line-height: 19px;
+                            color: #282846;
+                            margin-left: 10px;
+                        }
+                    }
+                    .removal {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        max-width: 46px;
+                        width: 100%;
+                        margin-right: 15px;
+
+                        .removalImg {
+                            width: 18px;
+                            height: 18px;
                         }
                     }
                 }
             }
         }
-        .activeTasks {
-            max-width: 566px;
-            width: 100%;
-            height: 474px;
-            border: 1px solid #20302f;
-            .successestitleHeader {
-                @include successestitleHeader;
-                .successesTitle {
-                    @include successesTitle;
+        .infoSection {
+            width: 473px;
+            height: 770px;
+            margin-top: 30px;
+            .time {
+                display: flex;
+
+                flex-direction: column;
+                align-items: center;
+                @include timeMix;
+                height: 143px;
+                .timeP {
+                    font-family: Nunito;
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 18px;
+                    line-height: 25px;
+                    color: #29a19c;
+                    width: 425px;
                 }
-                .ellipsis {
-                    @include ellipsis;
-                    .ellipsisSpan {
-                        @include ellipsisSpan;
+                .timeData {
+                    display: flex;
+                    justify-content: space-between;
+                    width: 425px;
+                    height: 58px;
+                    .timeDataBlock {
+                        .timeDataP {
+                            font-family: Nunito;
+                            font-style: normal;
+                            font-weight: normal;
+                            font-size: 14px;
+                            line-height: 0;
+                            color: #282846;
+                        }
+                        .timeClock {
+                            width: 24px;
+                            height: 24px;
+                        }
+                        .timeSpan {
+                            font-family: Nunito;
+                            font-style: normal;
+                            font-weight: 600;
+                            font-size: 25px;
+                            line-height: 34px;
+                            color: #282846;
+                        }
                     }
                 }
+            }
+            .containerObservation {
+                display: flex;
+                justify-content: center;
+                margin-top: 30px;
+                @include timeMix;
+                width: 472px;
+                height: 133px;
+                .observation {
+                    width: 432px;
+                    .observationP {
+                        width: 432px;
+                        height: 25px;
+                        font-family: Nunito;
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 18px;
+                        line-height: 25px;
+                        color: #29a19c;
+                    }
+                    .observationText {
+                        .observationTextP {
+                            font-family: Nunito;
+                            font-style: normal;
+                            font-weight: normal;
+                            font-size: 14px;
+                            line-height: 19px;
+                            color: #282846;
+                        }
+                    }
+                }
+            }
+            .addition {
+                width: 472px;
+                height: 256px;
             }
         }
     }
