--- a/css/mainPage.scss
+++ b/css/mainPage.scss
@@ -1,6 +1,7 @@
 body {
     background: #fafafa;
     display: flex;
+    justify-content: center;
 }
 
 @mixin successestitleHeader {
@@ -279,6 +280,7 @@ body {
                             color: #282846;
                         }
                         .timeClock {
+                            vertical-align: sub;
                             width: 24px;
                             height: 24px;
                         }
