--- a/css/mainPage.scss
+++ b/css/mainPage.scss
@@ -2,6 +2,7 @@ body {
     background: #fafafa;
     display: flex;
     justify-content: center;
+    transition: 2s linear;
 }
 
 @mixin successestitleHeader {
@@ -33,7 +34,7 @@ body {
     justify-content: space-between;
     width: 6px;
     height: 6px;
-    background: #282846;
+    background-color: #282846;
     border-radius: 50px;
 }
 @mixin timeMix {
@@ -57,6 +58,7 @@ body {
         max-width: 1068px;
         width: 100%;
         height: 44px;
+        transition: 1s linear;
 
         .newTask {
             display: flex;
@@ -129,6 +131,7 @@ body {
                 box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
                 border-radius: 10px;
                 margin-bottom: 30px;
+                transition: 2s linear;
 
                 .successestitleHeader {
                     @include successestitleHeader;
@@ -165,6 +168,7 @@ body {
                             background: #ffffff;
                             width: 100px;
                             height: 100px;
+                            transition: 2s linear;
                             .meaning {
                                 font-family: Nunito;
                                 font-style: normal;
@@ -182,7 +186,7 @@ body {
                 max-width: 566px;
                 width: 100%;
                 height: 482px;
-
+                transition: 2s linear;
                 text-align: -webkit-center;
                 background: #ffffff;
                 box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
@@ -251,7 +255,7 @@ body {
             margin-top: 30px;
             .time {
                 display: flex;
-
+                transition: 2s linear;
                 flex-direction: column;
                 align-items: center;
                 @include timeMix;
@@ -302,6 +306,7 @@ body {
                 @include timeMix;
                 width: 472px;
                 height: 133px;
+                transition: 2s linear;
                 .observation {
                     width: 432px;
                     .observationP {
