--- a/css/book.css
+++ b/css/book.css
@@ -36,6 +36,7 @@
     width: 212px;
     height: 283px;
     margin-top: 60px;
+    width: fit-content;
 }
 
 .menu .categories .h1 {
@@ -160,8 +161,10 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 22px;
-    margin: 20px 0 20px 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
     color: #282846;
+    width: fit-content;
 }
 
 .menu .exid .exid_menu .ico3 {
@@ -175,6 +178,10 @@
     font-size: 20px;
     transition: 0.5s linear;
     cursor: pointer;
+}
+.addOutput {
+    margin-left: -600px;
+    transition: 0.5s;
 }
 .data .data1:hover {
     font-size: 20px;
