--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -50,6 +50,7 @@ body {
   width: 186px;
   height: 42px;
   background-color: #29a19c;
+  cursor: pointer;
 }
 
 .mainUnit header .newTask .cross {
@@ -113,15 +114,204 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
 }
 
-.mainUnit .tasksMain .tasks {
+.mainUnit .tasksMain .modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  left: 50%;
+  margin-left: -350px;
+  top: 50%;
+  margin-top: -175px;
+  z-index: 5;
+  width: 700px;
+  height: 350px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+          box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+  border-radius: 10px;
+  margin-bottom: 30px;
+  -webkit-transition: 2s linear;
+  transition: 2s linear;
+  opacity: 0;
+}
+
+.mainUnit .tasksMain .modal .modalTask {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 660px;
+  height: 28px;
+  margin: 20px 0px 30px 0px;
+}
+
+.mainUnit .tasksMain .modal .modalTask .modalH1 {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0.02em;
+  color: #29a19c;
+  margin: 0;
+}
+
+.mainUnit .tasksMain .modal .modalTask .modalSelect {
+  width: 151px;
+  height: 28px;
+  border: 1px solid rgba(40, 40, 70, 0.2);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 6px;
+  margin-left: 20px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000000;
+  opacity: 0.5;
+}
+
+.mainUnit .tasksMain .modal .addModalTask {
+  width: 660px;
+  height: 66px;
+  margin-bottom: 30px;
+}
+
+.mainUnit .tasksMain .modal .addModalTask .addModalTaskH2 {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+  color: #282846;
+}
+
+.mainUnit .tasksMain .modal .addModalTask .addModalTaskInput {
+  width: 660px;
+  height: 35px;
+  border: 1px solid rgba(40, 40, 70, 0.1);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 8px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000000;
+  padding-left: 20px;
+}
+
+.mainUnit .tasksMain .modal .addModalTask .addModalTaskСategory {
+  width: 200px;
+  height: 64px;
+}
+
+.mainUnit .tasksMain .modal .addModalTask .addModalTaskСategory .addModalTaskInput {
+  width: 200px;
+  height: 35px;
+  border: 1px solid rgba(40, 40, 70, 0.1);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 8px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000000;
+  opacity: 0.5;
+}
+
+.mainUnit .tasksMain .modal .addModalTaskButton {
+  width: 660px;
+  height: 64px;
+  position: relative;
+}
+
+.mainUnit .tasksMain .modal .addModalTaskButton .Cancel {
+  background: #f05454;
+  border-radius: 8px;
+  padding: 10px 25px;
+  border: none;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #fafafa;
+  position: absolute;
+  top: 34%;
+  cursor: pointer;
+}
+
+.mainUnit .tasksMain .modal .addModalTaskButton .Save {
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #29a19c;
+  border: 1px solid #29a19c;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 8px;
+  padding: 10px 25px;
+  position: absolute;
+  top: 32%;
+  left: 44%;
+  cursor: pointer;
+}
+
+.mainUnit .tasksMain .modal .Add {
+  background: #29a19c;
+  border-radius: 8px;
+  padding: 10px 25px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #fafafa;
+  border: none;
+  position: absolute;
+  top: 36%;
+  left: 81%;
+  cursor: pointer;
+}
+
+.mainUnit .tasksMain .addModalTaskDisplay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.mainUnit .tasksMain .modalNextClass {
+  border: 3px solid white;
+}
+
+.mainUnit .tasks {
   max-width: 566px;
   width: 100%;
   margin-top: 30px;
 }
 
-.mainUnit .tasksMain .tasks .successes {
+.mainUnit .tasks .successes {
   max-width: 566px;
   width: 100%;
   height: 211px;
@@ -135,7 +325,7 @@ body {
   transition: 2s linear;
 }
 
-.mainUnit .tasksMain .tasks .successes .successestitleHeader {
+.mainUnit .tasks .successes .successestitleHeader {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,7 +338,7 @@ body {
   padding-top: 20px;
 }
 
-.mainUnit .tasksMain .tasks .successes .successestitleHeader .successesTitle {
+.mainUnit .tasks .successes .successestitleHeader .successesTitle {
   font-family: Nunito;
   font-style: normal;
   font-weight: 600;
@@ -158,7 +348,7 @@ body {
   margin: 0;
 }
 
-.mainUnit .tasksMain .tasks .successes .successestitleHeader .ellipsis {
+.mainUnit .tasks .successes .successestitleHeader .ellipsis {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -170,7 +360,7 @@ body {
   width: 28px;
 }
 
-.mainUnit .tasksMain .tasks .successes .successestitleHeader .ellipsis .ellipsisSpan {
+.mainUnit .tasks .successes .successestitleHeader .ellipsis .ellipsisSpan {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -183,7 +373,7 @@ body {
   border-radius: 50px;
 }
 
-.mainUnit .tasksMain .tasks .successes .taskBoard {
+.mainUnit .tasks .successes .taskBoard {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -196,7 +386,7 @@ body {
   margin-top: 5px;
 }
 
-.mainUnit .tasksMain .tasks .successes .taskBoard .taskBoard_1 .taskBoardP {
+.mainUnit .tasks .successes .taskBoard .taskBoard_1 .taskBoardP {
   font-family: Nunito;
   font-style: normal;
   font-weight: 600;
@@ -205,7 +395,7 @@ body {
   color: #282846;
 }
 
-.mainUnit .tasksMain .tasks .successes .taskBoard .taskBoard_1 .rangeOfTasks {
+.mainUnit .tasks .successes .taskBoard .taskBoard_1 .rangeOfTasks {
   border: 1px solid #29a19c;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -217,7 +407,7 @@ body {
   transition: 2s linear;
 }
 
-.mainUnit .tasksMain .tasks .successes .taskBoard .taskBoard_1 .rangeOfTasks .meaning {
+.mainUnit .tasks .successes .taskBoard .taskBoard_1 .rangeOfTasks .meaning {
   font-family: Nunito;
   font-style: normal;
   font-weight: 600;
@@ -227,7 +417,7 @@ body {
   margin-top: 12px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks {
+.mainUnit .tasks .activeTasks {
   max-width: 566px;
   width: 100%;
   height: 482px;
@@ -240,7 +430,7 @@ body {
   border-radius: 10px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .successestitleHeader {
+.mainUnit .tasks .activeTasks .successestitleHeader {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -253,7 +443,7 @@ body {
   padding-top: 20px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .successestitleHeader .successesTitle {
+.mainUnit .tasks .activeTasks .successestitleHeader .successesTitle {
   font-family: Nunito;
   font-style: normal;
   font-weight: 600;
@@ -263,7 +453,7 @@ body {
   margin: 0;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .successestitleHeader .ellipsis {
+.mainUnit .tasks .activeTasks .successestitleHeader .ellipsis {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -275,7 +465,7 @@ body {
   width: 28px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .successestitleHeader .ellipsis .ellipsisSpan {
+.mainUnit .tasks .activeTasks .successestitleHeader .ellipsis .ellipsisSpan {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -288,7 +478,7 @@ body {
   border-radius: 50px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .checkСontainer {
+.mainUnit .tasks .activeTasks .checkСontainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -304,7 +494,7 @@ body {
   border-radius: 10px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .checkСontainer .check {
+.mainUnit .tasks .activeTasks .checkСontainer .check {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -314,13 +504,13 @@ body {
   margin-left: 15px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .checkСontainer .check .checkbox {
+.mainUnit .tasks .activeTasks .checkСontainer .check .checkbox {
   width: 20px;
   height: 20px;
   border: 1px solid #29a19c;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .checkСontainer .check .checkP {
+.mainUnit .tasks .activeTasks .checkСontainer .check .checkP {
   font-family: Nunito;
   font-style: normal;
   font-weight: normal;
@@ -330,7 +520,7 @@ body {
   margin-left: 10px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .checkСontainer .removal {
+.mainUnit .tasks .activeTasks .checkСontainer .removal {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -345,18 +535,18 @@ body {
   margin-right: 15px;
 }
 
-.mainUnit .tasksMain .tasks .activeTasks .checkСontainer .removal .removalImg {
+.mainUnit .tasks .activeTasks .checkСontainer .removal .removalImg {
   width: 18px;
   height: 18px;
 }
 
-.mainUnit .tasksMain .infoSection {
+.mainUnit .infoSection {
   width: 473px;
   height: 770px;
   margin-top: 30px;
 }
 
-.mainUnit .tasksMain .infoSection .time {
+.mainUnit .infoSection .time {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -377,7 +567,7 @@ body {
   height: 143px;
 }
 
-.mainUnit .tasksMain .infoSection .time .timeP {
+.mainUnit .infoSection .time .timeP {
   font-family: Nunito;
   font-style: normal;
   font-weight: 600;
@@ -387,7 +577,7 @@ body {
   width: 425px;
 }
 
-.mainUnit .tasksMain .infoSection .time .timeData {
+.mainUnit .infoSection .time .timeData {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -398,7 +588,7 @@ body {
   height: 58px;
 }
 
-.mainUnit .tasksMain .infoSection .time .timeData .timeDataBlock .timeDataP {
+.mainUnit .infoSection .time .timeData .timeDataBlock .timeDataP {
   font-family: Nunito;
   font-style: normal;
   font-weight: normal;
@@ -407,13 +597,13 @@ body {
   color: #282846;
 }
 
-.mainUnit .tasksMain .infoSection .time .timeData .timeDataBlock .timeClock {
+.mainUnit .infoSection .time .timeData .timeDataBlock .timeClock {
   vertical-align: sub;
   width: 24px;
   height: 24px;
 }
 
-.mainUnit .tasksMain .infoSection .time .timeData .timeDataBlock .timeSpan {
+.mainUnit .infoSection .time .timeData .timeDataBlock .timeSpan {
   font-family: Nunito;
   font-style: normal;
   font-weight: 600;
@@ -422,7 +612,7 @@ body {
   color: #282846;
 }
 
-.mainUnit .tasksMain .infoSection .containerObservation {
+.mainUnit .infoSection .containerObservation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -441,11 +631,11 @@ body {
   transition: 2s linear;
 }
 
-.mainUnit .tasksMain .infoSection .containerObservation .observation {
+.mainUnit .infoSection .containerObservation .observation {
   width: 432px;
 }
 
-.mainUnit .tasksMain .infoSection .containerObservation .observation .observationP {
+.mainUnit .infoSection .containerObservation .observation .observationP {
   width: 432px;
   height: 25px;
   font-family: Nunito;
@@ -456,7 +646,7 @@ body {
   color: #29a19c;
 }
 
-.mainUnit .tasksMain .infoSection .containerObservation .observation .observationText .observationTextP {
+.mainUnit .infoSection .containerObservation .observation .observationText .observationTextP {
   font-family: Nunito;
   font-style: normal;
   font-weight: normal;
@@ -465,8 +655,19 @@ body {
   color: #282846;
 }
 
-.mainUnit .tasksMain .infoSection .addition {
+.mainUnit .infoSection .addition {
   width: 472px;
   height: 256px;
+}
+
+.modalStyle {
+  display: none;
+  position: absolute;
+  width: 99%;
+  height: 99%;
+  z-index: 2;
+  opacity: 0.8;
+  -webkit-transition: 2s linear;
+  transition: 2s linear;
 }
 /*# sourceMappingURL=mainPage.css.map */
