--- a/css/userAccount.css
+++ b/css/userAccount.css
@@ -10,6 +10,8 @@
   -webkit-box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
           box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
   border-radius: 10px;
+  -webkit-transition: 2s linear;
+  transition: 2s linear;
 }
 
 .tasksMain .tasks .tasksUser .tasksUserOne {
