--- a/css/userAccount.scss
+++ b/css/userAccount.scss
@@ -8,6 +8,7 @@
             background: #ffffff;
             box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
             border-radius: 10px;
+            transition: 2s linear;
 
             .tasksUserOne {
                 width: 150px;
